--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
-	<title>ToDoList</title>
+	<title>Nurken site</title>
 </head>
 <body>
 	<div class="wrap">
